# oncall-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  run.py
app/: __init__.py  main.py
app/api/routes/: analysis.py
app/core/: config.py  exceptions.py  logging.py
app/integrations/gcp/: __init__.py  logging_client.py
app/schemas/: analysis.py
app/services/: analysis_service.py  document_service.py  llm_service.py
requirements/: base.txt  dev.txt  prod.txt
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_document_service.py  test_gcp_integration.py
